src/components/DropdownMenu/components/DropdownMenuOption.module.css
.win95-dropdown-option {
    display: flex;
    align-items: center;
    position: relative;
    list-style: none;
    padding: 2px 10px 2px 25px;
}

.win95-dropdown-option-text:first-letter {
    text-decoration: underline;
}

.option-disabled {
    color: var(--win95-titlebar-bg-inactive);
}

.option-disabled:hover {
    color: var(--win95-titlebar-bg-inactive) !important;
}

.dropdown-option-arrow {
    width: 0;
    height: 0;
    margin-left: auto;
    border-left: 5px solid black;
    border-top: 5px solid transparent;
    border-bottom: 5px solid transparent;
}

.dropdown-option-menu {
    display: none;
    position: absolute;
    left: 150px;
    top: 0;
}

.win95-dropdown-option:hover {
    color: #fff;
    background-color: var(--win95-titlebar-bg-active);
}

.win95-dropdown-option:hover .dropdown-option-arrow {
    border-left-color: #fff;
}

.win95-dropdown-option:hover .dropdown-option-menu {
    display: block;
    color: initial;
}

